// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildPrompt snapshots > agentic-review with refDiff and reviewBase plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean

### Work packages in \`.gtd/\`

- \`01-foo/\`
  - \`01-task.md\`
  - \`02-task.md\`
Spawn a **reviewing subagent** using model \`MODEL-agentic-review\`. The package's task spec
files and its cumulative diff are found below. The subagent must:

1. **Read the task spec files** — they define the acceptance criteria. Every
   requirement must be checked.
2. **Read the package diff** — examine every hunk to determine whether the
   implementation satisfies the spec.
3. **Always write \`FEEDBACK.md\`** in the repo root:
   - **Fully satisfies the spec** → write an **empty** \`FEEDBACK.md\` (zero bytes
     or whitespace only). This empty file is the **approval** signal.
   - **Does not fully satisfy** → write concrete, actionable findings anchored
     to specific file and symbol names, grouped under short headings, so the fix
     agent can act without re-reading the diff.
4. **Do not edit source files and do not commit** — the reviewer only writes
   \`FEEDBACK.md\`, left uncommitted.

### Package: \`01-foo/\`

#### \`01-task.md\`

\`\`\`
First task
\`\`\`

#### \`02-task.md\`

\`\`\`\`
see \`\`\`block\`\`\` and - [ ] item
\`\`\`\`

### Package diff

\`\`\`diff
diff --git a/src/foo.ts b/src/foo.ts
+export const foo = 1
\`\`\`

After completing the tasks above, run \`gtd\` in the current working directory and
follow its output verbatim — execute exactly what it says, step by step, without
adding interpretation or extra steps.
"
`;

exports[`buildPrompt snapshots > agentic-review with rich package json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean

### Work packages in \`.gtd/\`

- \`01-foo/\`
  - \`01-task.md\`
  - \`02-task.md\`
Spawn a **reviewing subagent** using model \`MODEL-agentic-review\`. The package's task spec
files and its cumulative diff are found below. The subagent must:

1. **Read the task spec files** — they define the acceptance criteria. Every
   requirement must be checked.
2. **Read the package diff** — examine every hunk to determine whether the
   implementation satisfies the spec.
3. **Always write \`FEEDBACK.md\`** in the repo root:
   - **Fully satisfies the spec** → write an **empty** \`FEEDBACK.md\` (zero bytes
     or whitespace only). This empty file is the **approval** signal.
   - **Does not fully satisfy** → write concrete, actionable findings anchored
     to specific file and symbol names, grouped under short headings, so the fix
     agent can act without re-reading the diff.
4. **Do not edit source files and do not commit** — the reviewer only writes
   \`FEEDBACK.md\`, left uncommitted.

### Package: \`01-foo/\`

#### \`01-task.md\`

\`\`\`
First task
\`\`\`

#### \`02-task.md\`

\`\`\`\`
see \`\`\`block\`\`\` and - [ ] item
\`\`\`\`

Complete the tasks above, then end your turn. An outside process will decide
what to do next.
"
`;

exports[`buildPrompt snapshots > agentic-review with rich package plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean

### Work packages in \`.gtd/\`

- \`01-foo/\`
  - \`01-task.md\`
  - \`02-task.md\`
Spawn a **reviewing subagent** using model \`MODEL-agentic-review\`. The package's task spec
files and its cumulative diff are found below. The subagent must:

1. **Read the task spec files** — they define the acceptance criteria. Every
   requirement must be checked.
2. **Read the package diff** — examine every hunk to determine whether the
   implementation satisfies the spec.
3. **Always write \`FEEDBACK.md\`** in the repo root:
   - **Fully satisfies the spec** → write an **empty** \`FEEDBACK.md\` (zero bytes
     or whitespace only). This empty file is the **approval** signal.
   - **Does not fully satisfy** → write concrete, actionable findings anchored
     to specific file and symbol names, grouped under short headings, so the fix
     agent can act without re-reading the diff.
4. **Do not edit source files and do not commit** — the reviewer only writes
   \`FEEDBACK.md\`, left uncommitted.

### Package: \`01-foo/\`

#### \`01-task.md\`

\`\`\`
First task
\`\`\`

#### \`02-task.md\`

\`\`\`\`
see \`\`\`block\`\`\` and - [ ] item
\`\`\`\`

After completing the tasks above, run \`gtd\` in the current working directory and
follow its output verbatim — execute exactly what it says, step by step, without
adding interpretation or extra steps.
"
`;

exports[`buildPrompt snapshots > building with rich package json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean

### Work packages in \`.gtd/\`

- \`01-foo/\`
  - \`01-task.md\`
  - \`02-task.md\`
Build the package described below by orchestrating the execution — you do not
implement the tasks yourself. Spawn **one subagent per task**, all in
**parallel**, each using model \`MODEL-building\`:

- **Context**: the task content only (it is self-contained).
- **Fresh context**: each worker starts cold, with no shared history.
- **TDD discipline** (inline rules for workers):
  - Write ONE test → implement → pass → repeat (vertical slices).
  - **Do NOT** write all tests first then implement (horizontal slicing).
  - Tests verify behavior through public interfaces, not implementation details
    — a good test survives a refactor.

Wait for all workers to complete. **If any worker fails** (crash, timeout, error
— not a test failure): report which tasks failed and ask the user whether to
retry the failed tasks, skip and continue, or abort.

Leave all changes uncommitted. An outside process handles that.

### Package: \`01-foo/\`

#### \`01-task.md\`

\`\`\`
First task
\`\`\`

#### \`02-task.md\`

\`\`\`\`
see \`\`\`block\`\`\` and - [ ] item
\`\`\`\`

Complete the tasks above, then end your turn. An outside process will decide
what to do next.
"
`;

exports[`buildPrompt snapshots > building with rich package plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean

### Work packages in \`.gtd/\`

- \`01-foo/\`
  - \`01-task.md\`
  - \`02-task.md\`
Build the package described below by orchestrating the execution — you do not
implement the tasks yourself. Spawn **one subagent per task**, all in
**parallel**, each using model \`MODEL-building\`:

- **Context**: the task content only (it is self-contained).
- **Fresh context**: each worker starts cold, with no shared history.
- **TDD discipline** (inline rules for workers):
  - Write ONE test → implement → pass → repeat (vertical slices).
  - **Do NOT** write all tests first then implement (horizontal slicing).
  - Tests verify behavior through public interfaces, not implementation details
    — a good test survives a refactor.

Wait for all workers to complete. **If any worker fails** (crash, timeout, error
— not a test failure): report which tasks failed and ask the user whether to
retry the failed tasks, skip and continue, or abort.

Leave all changes uncommitted. An outside process handles that.

### Package: \`01-foo/\`

#### \`01-task.md\`

\`\`\`
First task
\`\`\`

#### \`02-task.md\`

\`\`\`\`
see \`\`\`block\`\`\` and - [ ] item
\`\`\`\`

After completing the tasks above, run \`gtd\` in the current working directory and
follow its output verbatim — execute exactly what it says, step by step, without
adding interpretation or extra steps.
"
`;

exports[`buildPrompt snapshots > clean with no diff json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean
Spawn a **planning-model subagent** using model \`MODEL-clean\` to author a
\`REVIEW.md\` file that will help a human to review the changes. It must:

1. **Read the diff inlined below** — extract the changed hunks with their file
   paths.
2. **Group hunks semantically** — cluster hunks that serve the same logical
   concern (the same feature, refactor, or fix), even across files. Aim for the
   fewest chunks that keep the review navigable.
3. **Write \`REVIEW.md\`** in the repo root in this format:

   \`\`\`markdown
   # Review: <short-hash>

   <!-- base: <full-hash> -->

   ## <Chunk Title>

   <What this chunk changes and why>

   - [ ] ./path/to/file.ts#42
   - [ ] ./path/to/file.ts#99

   ## <Another Chunk Title>

   <Explanation>

   - [ ] ./path/to/another.ts#1
   \`\`\`

   - \`<short-hash>\` is the first 7 characters of the review base SHA;
     \`<full-hash>\` is the full SHA. Both are read from the \`Review base:\` line /
     diff label in the prompt context.
   - Chunk titles are short imperative phrases (≤ 6 words).
   - Explanations describe _what_ changed and _why_, not just where.
   - File pointers are relative, prefixed with \`./\`; the line numbers (\`#42\`)
     are creation-time hints that will drift — not authoritative.
   - Checkboxes (\`- [ ]\`) signal approval — ticking them (with no other edits)
     counts as approving the review (\`gtd: done\`). Only non-checkbox edits to
     \`REVIEW.md\` (or any code edits) are treated as a change-request.
   - The user checks off or edits items in place as they work through the
     review; there is no separate Resolved section.

4. Leave \`REVIEW.md\` **uncommitted**, the outer loop will process it.

Complete the tasks above, then end your turn. An outside process will decide
what to do next.
"
`;

exports[`buildPrompt snapshots > clean with no diff plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean
Spawn a **planning-model subagent** using model \`MODEL-clean\` to author a
\`REVIEW.md\` file that will help a human to review the changes. It must:

1. **Read the diff inlined below** — extract the changed hunks with their file
   paths.
2. **Group hunks semantically** — cluster hunks that serve the same logical
   concern (the same feature, refactor, or fix), even across files. Aim for the
   fewest chunks that keep the review navigable.
3. **Write \`REVIEW.md\`** in the repo root in this format:

   \`\`\`markdown
   # Review: <short-hash>

   <!-- base: <full-hash> -->

   ## <Chunk Title>

   <What this chunk changes and why>

   - [ ] ./path/to/file.ts#42
   - [ ] ./path/to/file.ts#99

   ## <Another Chunk Title>

   <Explanation>

   - [ ] ./path/to/another.ts#1
   \`\`\`

   - \`<short-hash>\` is the first 7 characters of the review base SHA;
     \`<full-hash>\` is the full SHA. Both are read from the \`Review base:\` line /
     diff label in the prompt context.
   - Chunk titles are short imperative phrases (≤ 6 words).
   - Explanations describe _what_ changed and _why_, not just where.
   - File pointers are relative, prefixed with \`./\`; the line numbers (\`#42\`)
     are creation-time hints that will drift — not authoritative.
   - Checkboxes (\`- [ ]\`) signal approval — ticking them (with no other edits)
     counts as approving the review (\`gtd: done\`). Only non-checkbox edits to
     \`REVIEW.md\` (or any code edits) are treated as a change-request.
   - The user checks off or edits items in place as they work through the
     review; there is no separate Resolved section.

4. Leave \`REVIEW.md\` **uncommitted**, the outer loop will process it.

After the tasks above are done, end your turn and never invoke an additional
process. This is a human feedback gate and the next step has to be invoked by a
human manually.
"
`;

exports[`buildPrompt snapshots > clean with refDiff and reviewBase json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean
Spawn a **planning-model subagent** using model \`MODEL-clean\` to author a
\`REVIEW.md\` file that will help a human to review the changes. It must:

1. **Read the diff inlined below** — extract the changed hunks with their file
   paths.
2. **Group hunks semantically** — cluster hunks that serve the same logical
   concern (the same feature, refactor, or fix), even across files. Aim for the
   fewest chunks that keep the review navigable.
3. **Write \`REVIEW.md\`** in the repo root in this format:

   \`\`\`markdown
   # Review: <short-hash>

   <!-- base: <full-hash> -->

   ## <Chunk Title>

   <What this chunk changes and why>

   - [ ] ./path/to/file.ts#42
   - [ ] ./path/to/file.ts#99

   ## <Another Chunk Title>

   <Explanation>

   - [ ] ./path/to/another.ts#1
   \`\`\`

   - \`<short-hash>\` is the first 7 characters of the review base SHA;
     \`<full-hash>\` is the full SHA. Both are read from the \`Review base:\` line /
     diff label in the prompt context.
   - Chunk titles are short imperative phrases (≤ 6 words).
   - Explanations describe _what_ changed and _why_, not just where.
   - File pointers are relative, prefixed with \`./\`; the line numbers (\`#42\`)
     are creation-time hints that will drift — not authoritative.
   - Checkboxes (\`- [ ]\`) signal approval — ticking them (with no other edits)
     counts as approving the review (\`gtd: done\`). Only non-checkbox edits to
     \`REVIEW.md\` (or any code edits) are treated as a change-request.
   - The user checks off or edits items in place as they work through the
     review; there is no separate Resolved section.

4. Leave \`REVIEW.md\` **uncommitted**, the outer loop will process it.

Review base: abc1234

### Changes to review (\`git diff abc1234 HEAD\`)

\`\`\`diff
diff --git a/x b/x
+hello
\`\`\`

Complete the tasks above, then end your turn. An outside process will decide
what to do next.
"
`;

exports[`buildPrompt snapshots > clean with refDiff and reviewBase plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean
Spawn a **planning-model subagent** using model \`MODEL-clean\` to author a
\`REVIEW.md\` file that will help a human to review the changes. It must:

1. **Read the diff inlined below** — extract the changed hunks with their file
   paths.
2. **Group hunks semantically** — cluster hunks that serve the same logical
   concern (the same feature, refactor, or fix), even across files. Aim for the
   fewest chunks that keep the review navigable.
3. **Write \`REVIEW.md\`** in the repo root in this format:

   \`\`\`markdown
   # Review: <short-hash>

   <!-- base: <full-hash> -->

   ## <Chunk Title>

   <What this chunk changes and why>

   - [ ] ./path/to/file.ts#42
   - [ ] ./path/to/file.ts#99

   ## <Another Chunk Title>

   <Explanation>

   - [ ] ./path/to/another.ts#1
   \`\`\`

   - \`<short-hash>\` is the first 7 characters of the review base SHA;
     \`<full-hash>\` is the full SHA. Both are read from the \`Review base:\` line /
     diff label in the prompt context.
   - Chunk titles are short imperative phrases (≤ 6 words).
   - Explanations describe _what_ changed and _why_, not just where.
   - File pointers are relative, prefixed with \`./\`; the line numbers (\`#42\`)
     are creation-time hints that will drift — not authoritative.
   - Checkboxes (\`- [ ]\`) signal approval — ticking them (with no other edits)
     counts as approving the review (\`gtd: done\`). Only non-checkbox edits to
     \`REVIEW.md\` (or any code edits) are treated as a change-request.
   - The user checks off or edits items in place as they work through the
     review; there is no separate Resolved section.

4. Leave \`REVIEW.md\` **uncommitted**, the outer loop will process it.

Review base: abc1234

### Changes to review (\`git diff abc1234 HEAD\`)

\`\`\`diff
diff --git a/x b/x
+hello
\`\`\`

After the tasks above are done, end your turn and never invoke an additional
process. This is a human feedback gate and the next step has to be invoked by a
human manually.
"
`;

exports[`buildPrompt snapshots > escalate json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean
The agent was not able to fix all errors on its own. The last error report is
stored in \`ERRORS.md\` for a human to investigate.

Next steps for the human developer:

1. Investigate and fix errors reported in \`ERRORS.md\`
2. Delete \`ERRORS.md\`
3. Continue the process when you are ready

Complete the tasks above, then end your turn. An outside process will decide
what to do next.
"
`;

exports[`buildPrompt snapshots > escalate plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean
The agent was not able to fix all errors on its own. The last error report is
stored in \`ERRORS.md\` for a human to investigate.

Next steps for the human developer:

1. Investigate and fix errors reported in \`ERRORS.md\`
2. Delete \`ERRORS.md\`
3. Continue the process when you are ready

After the tasks above are done, end your turn and never invoke an additional
process. This is a human feedback gate and the next step has to be invoked by a
human manually.
"
`;

exports[`buildPrompt snapshots > fixing with backtick feedbackContent plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean
Spawn a **fix subagent** using model \`MODEL-fixing\` to apply fixes for the feedback
below:

1. **Work through the Feedback to address section below** — address every item
   it lists. For test output, make the failing tests pass; for review findings,
   satisfy each finding against the package's task specs.
2. **Make the fix in place** — change the code to resolve the feedback. Keep the
   change focused; do not refactor unrelated code.
3. **Leave every change uncommitted** — do **not** commit or stage.

### Feedback to address

\`\`\`\`
see \`\`\`snippet\`\`\` here
\`\`\`\`

After completing the tasks above, run \`gtd\` in the current working directory and
follow its output verbatim — execute exactly what it says, step by step, without
adding interpretation or extra steps.
"
`;

exports[`buildPrompt snapshots > fixing with dirty working tree and diff plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: dirty

### Working-tree diff (\`git diff HEAD\`, untracked included)

\`\`\`diff
diff --git a/foo b/foo
+changed
\`\`\`

Spawn a **fix subagent** using model \`MODEL-fixing\` to apply fixes for the feedback
below:

1. **Work through the Feedback to address section below** — address every item
   it lists. For test output, make the failing tests pass; for review findings,
   satisfy each finding against the package's task specs.
2. **Make the fix in place** — change the code to resolve the feedback. Keep the
   change focused; do not refactor unrelated code.
3. **Leave every change uncommitted** — do **not** commit or stage.

### Feedback to address

\`\`\`
FAIL: tests failed
\`\`\`

After completing the tasks above, run \`gtd\` in the current working directory and
follow its output verbatim — execute exactly what it says, step by step, without
adding interpretation or extra steps.
"
`;

exports[`buildPrompt snapshots > fixing with empty feedbackContent json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean
Spawn a **fix subagent** using model \`MODEL-fixing\` to apply fixes for the feedback
below:

1. **Work through the Feedback to address section below** — address every item
   it lists. For test output, make the failing tests pass; for review findings,
   satisfy each finding against the package's task specs.
2. **Make the fix in place** — change the code to resolve the feedback. Keep the
   change focused; do not refactor unrelated code.
3. **Leave every change uncommitted** — do **not** commit or stage.

Complete the tasks above, then end your turn. An outside process will decide
what to do next.
"
`;

exports[`buildPrompt snapshots > fixing with empty feedbackContent plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean
Spawn a **fix subagent** using model \`MODEL-fixing\` to apply fixes for the feedback
below:

1. **Work through the Feedback to address section below** — address every item
   it lists. For test output, make the failing tests pass; for review findings,
   satisfy each finding against the package's task specs.
2. **Make the fix in place** — change the code to resolve the feedback. Keep the
   change focused; do not refactor unrelated code.
3. **Leave every change uncommitted** — do **not** commit or stage.

After completing the tasks above, run \`gtd\` in the current working directory and
follow its output verbatim — execute exactly what it says, step by step, without
adding interpretation or extra steps.
"
`;

exports[`buildPrompt snapshots > fixing with plain feedbackContent plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean
Spawn a **fix subagent** using model \`MODEL-fixing\` to apply fixes for the feedback
below:

1. **Work through the Feedback to address section below** — address every item
   it lists. For test output, make the failing tests pass; for review findings,
   satisfy each finding against the package's task specs.
2. **Make the fix in place** — change the code to resolve the feedback. Keep the
   change focused; do not refactor unrelated code.
3. **Leave every change uncommitted** — do **not** commit or stage.

### Feedback to address

\`\`\`
FAIL: expected 1 to equal 2
\`\`\`

After completing the tasks above, run \`gtd\` in the current working directory and
follow its output verbatim — execute exactly what it says, step by step, without
adding interpretation or extra steps.
"
`;

exports[`buildPrompt snapshots > grilled json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean
\`TODO.md\` contains an implementation plan. Decompose it into an ordered set of
executable work packages stored in the \`.gtd/\` directory. If \`.gtd/\` already
holds packages from an earlier turn, immediately abort and raise an error.

Spawn a **planning-model subagent** using model \`MODEL-decompose\` to perform the
decomposition. It creates numbered package directories, each holding numbered
task files:

\`\`\`
.gtd/
  01-<package-name>/
    01-<task-name>.md
    02-<task-name>.md
  02-<package-name>/
    ...
\`\`\`

**Rules for the subagent:**

1. **Packages are sequential, in dependency order** — ordinal-prefixed
   directories (\`01-\`, \`02-\`, …) execute in that order and the set is frozen
   once written. Order them so each package depends only on lower-numbered ones.

2. **Each package is green on its own** — the test suite runs after every
   package. Never split a feature so the tree stays red until a later package
   lands.

3. **Tasks within a package are parallel and file-disjoint** — all tasks in a
   package run simultaneously, each via one subagent, against the same working
   tree with no isolation. Two tasks that would touch the same file must be
   **merged** into one. If task B depends on task A, put them in separate
   packages.

4. **Vertical slices, not horizontal** — each package is a thin, end-to-end
   slice that is demoable or verifiable on its own. Prefer many thin packages
   over few thick ones; never a "set up infrastructure" package.

5. **Task files are self-contained** — each task \`.md\` includes a clear
   description of what to build, acceptance criteria as \`- [ ] Criterion\`
   checkboxes, the relevant file paths to examine, and any constraints or edge
   cases. It is the only context building agents will receive to work on the
   task.

**DO NOT** commit any changes. This process runs within a larger orchestration
that depends on uncommitted changes.

Complete the tasks above, then end your turn. An outside process will decide
what to do next.
"
`;

exports[`buildPrompt snapshots > grilled plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean
\`TODO.md\` contains an implementation plan. Decompose it into an ordered set of
executable work packages stored in the \`.gtd/\` directory. If \`.gtd/\` already
holds packages from an earlier turn, immediately abort and raise an error.

Spawn a **planning-model subagent** using model \`MODEL-decompose\` to perform the
decomposition. It creates numbered package directories, each holding numbered
task files:

\`\`\`
.gtd/
  01-<package-name>/
    01-<task-name>.md
    02-<task-name>.md
  02-<package-name>/
    ...
\`\`\`

**Rules for the subagent:**

1. **Packages are sequential, in dependency order** — ordinal-prefixed
   directories (\`01-\`, \`02-\`, …) execute in that order and the set is frozen
   once written. Order them so each package depends only on lower-numbered ones.

2. **Each package is green on its own** — the test suite runs after every
   package. Never split a feature so the tree stays red until a later package
   lands.

3. **Tasks within a package are parallel and file-disjoint** — all tasks in a
   package run simultaneously, each via one subagent, against the same working
   tree with no isolation. Two tasks that would touch the same file must be
   **merged** into one. If task B depends on task A, put them in separate
   packages.

4. **Vertical slices, not horizontal** — each package is a thin, end-to-end
   slice that is demoable or verifiable on its own. Prefer many thin packages
   over few thick ones; never a "set up infrastructure" package.

5. **Task files are self-contained** — each task \`.md\` includes a clear
   description of what to build, acceptance criteria as \`- [ ] Criterion\`
   checkboxes, the relevant file paths to examine, and any constraints or edge
   cases. It is the only context building agents will receive to work on the
   task.

**DO NOT** commit any changes. This process runs within a larger orchestration
that depends on uncommitted changes.

After completing the tasks above, run \`gtd\` in the current working directory and
follow its output verbatim — execute exactly what it says, step by step, without
adding interpretation or extra steps.
"
`;

exports[`buildPrompt snapshots > grilled-review json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean
 The
plan in \`TODO.md\` has converged — no open questions remain — and has been
committed as \`gtd: grilled\`.

### Human review gate

This is a human review point. Tell the user to open \`TODO.md\` and review the
finalized plan:

- To **proceed**, continue with a clean working tree — the plan will be
  decomposed into \`.gtd/\` work packages.
- To **revise**, edit \`TODO.md\` (or sketch code) and continue — the changes
  re-enter the grilling loop for another convergence round.

Complete the tasks above, then end your turn. An outside process will decide
what to do next.
"
`;

exports[`buildPrompt snapshots > grilled-review plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean
 The
plan in \`TODO.md\` has converged — no open questions remain — and has been
committed as \`gtd: grilled\`.

### Human review gate

This is a human review point. Tell the user to open \`TODO.md\` and review the
finalized plan:

- To **proceed**, continue with a clean working tree — the plan will be
  decomposed into \`.gtd/\` work packages.
- To **revise**, edit \`TODO.md\` (or sketch code) and continue — the changes
  re-enter the grilling loop for another convergence round.

After the tasks above are done, end your turn and never invoke an additional
process. This is a human feedback gate and the next step has to be invoked by a
human manually.
"
`;

exports[`buildPrompt snapshots > grilling iterate json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean
\`TODO.md\` holds the plan under development. The grilling loop interviews it —
surfacing and resolving open questions — until the plan is solid enough to
decompose into work packages.

### The convergence marker

Every open question carries a single placeholder comment on its own line,
directly beneath the question:

\`<!-- user answers here -->\`

This placeholder is the **convergence marker**. While _any_ marker is present in
\`TODO.md\`, the harness **stops** and waits for the user to answer inline. When
there are genuinely no open questions left, write the sentinel line

\`no open questions — ready to plan\`

and leave **no** markers — the next cycle advances the plan to decomposition.
The sentinel means the plan is fully developed and ready to decompose — it is
never a substitute for writing the plan.

### Develop the plan

Spawn a **planning-model subagent** using model \`MODEL-grilling\` to develop the plan.
The subagent works entirely by editing \`TODO.md\` (it cannot talk to the user):

1. **Always develop \`TODO.md\` into a concrete plan.** Replace the captured input
   / seed template with a real implementation plan — the files to change,
   exactly what changes, and why — grounded in the codebase. Do this on every
   iteration, whether or not any questions remain open. A plan that still
   contains only the seed "Captured input" block is never ready to converge.
2. **Read any "Captured input" diff block as feedback, not finished work:** code
   changes are suggestions — fold them into the plan and re-implement them
   properly, including test coverage, rather than restoring them verbatim; code
   comments are positional feedback about the code at that location;
   TODO.md/REVIEW.md text changes are global feedback on the plan or the
   reviewed work as a whole; checkbox flips in a captured REVIEW.md diff are
   approval noise — ignore them. the harness has already reverted captured code
   from the working tree.
3. For every question the user has just answered (the answer written in place of
   its \`<!-- user answers here -->\` marker): integrate the answer into the plan
   body, then move the question into a \`## Resolved\` section at the bottom,
   recording the user's response as \`**Answer:** …\`.
4. Continue interviewing the plan with this discipline:
   - **Explore before asking** — if the codebase or docs answer it, explore
     instead of asking.
   - **Prioritize high-stakes questions** — hard-to-reverse decisions before
     easy-to-change ones.
   - **Walk branches completely** — group related questions so the user can
     resolve one branch fully before the next.
   - **Every question advances a decision** — never ask something that would not
     change the implementation.
   - Every answer opens new branches; generate fresh questions for any ambiguity
     the answers surface.
5. Write each new open question near the top of the file, each followed on its
   own line by the \`<!-- user answers here -->\` marker.
6. If the plan is now fully resolved, leave **no** markers and write the
   sentinel \`no open questions — ready to plan\` instead. Only write the sentinel
   once \`TODO.md\` holds a concrete plan — the sentinel signals the plan is ready
   to decompose, not that planning can be skipped.

Leave \`TODO.md\` **uncommitted** — the next cycle commits it \`gtd: grilling\` and
re-derives.

Complete the tasks above, then end your turn. An outside process will decide
what to do next.
"
`;

exports[`buildPrompt snapshots > grilling iterate plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean
\`TODO.md\` holds the plan under development. The grilling loop interviews it —
surfacing and resolving open questions — until the plan is solid enough to
decompose into work packages.

### The convergence marker

Every open question carries a single placeholder comment on its own line,
directly beneath the question:

\`<!-- user answers here -->\`

This placeholder is the **convergence marker**. While _any_ marker is present in
\`TODO.md\`, the harness **stops** and waits for the user to answer inline. When
there are genuinely no open questions left, write the sentinel line

\`no open questions — ready to plan\`

and leave **no** markers — the next cycle advances the plan to decomposition.
The sentinel means the plan is fully developed and ready to decompose — it is
never a substitute for writing the plan.

### Develop the plan

Spawn a **planning-model subagent** using model \`MODEL-grilling\` to develop the plan.
The subagent works entirely by editing \`TODO.md\` (it cannot talk to the user):

1. **Always develop \`TODO.md\` into a concrete plan.** Replace the captured input
   / seed template with a real implementation plan — the files to change,
   exactly what changes, and why — grounded in the codebase. Do this on every
   iteration, whether or not any questions remain open. A plan that still
   contains only the seed "Captured input" block is never ready to converge.
2. **Read any "Captured input" diff block as feedback, not finished work:** code
   changes are suggestions — fold them into the plan and re-implement them
   properly, including test coverage, rather than restoring them verbatim; code
   comments are positional feedback about the code at that location;
   TODO.md/REVIEW.md text changes are global feedback on the plan or the
   reviewed work as a whole; checkbox flips in a captured REVIEW.md diff are
   approval noise — ignore them. the harness has already reverted captured code
   from the working tree.
3. For every question the user has just answered (the answer written in place of
   its \`<!-- user answers here -->\` marker): integrate the answer into the plan
   body, then move the question into a \`## Resolved\` section at the bottom,
   recording the user's response as \`**Answer:** …\`.
4. Continue interviewing the plan with this discipline:
   - **Explore before asking** — if the codebase or docs answer it, explore
     instead of asking.
   - **Prioritize high-stakes questions** — hard-to-reverse decisions before
     easy-to-change ones.
   - **Walk branches completely** — group related questions so the user can
     resolve one branch fully before the next.
   - **Every question advances a decision** — never ask something that would not
     change the implementation.
   - Every answer opens new branches; generate fresh questions for any ambiguity
     the answers surface.
5. Write each new open question near the top of the file, each followed on its
   own line by the \`<!-- user answers here -->\` marker.
6. If the plan is now fully resolved, leave **no** markers and write the
   sentinel \`no open questions — ready to plan\` instead. Only write the sentinel
   once \`TODO.md\` holds a concrete plan — the sentinel signals the plan is ready
   to decompose, not that planning can be skipped.

Leave \`TODO.md\` **uncommitted** — the next cycle commits it \`gtd: grilling\` and
re-derives.

After completing the tasks above, run \`gtd\` in the current working directory and
follow its output verbatim — execute exactly what it says, step by step, without
adding interpretation or extra steps.
"
`;

exports[`buildPrompt snapshots > grilling stop json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean
\`TODO.md\` holds the plan under development. The grilling loop interviews it —
surfacing and resolving open questions — until the plan is solid enough to
decompose into work packages.

### The convergence marker

Every open question carries a single placeholder comment on its own line,
directly beneath the question:

\`<!-- user answers here -->\`

This placeholder is the **convergence marker**. While _any_ marker is present in
\`TODO.md\`, the harness **stops** and waits for the user to answer inline. When
there are genuinely no open questions left, write the sentinel line

\`no open questions — ready to plan\`

and leave **no** markers — the next cycle advances the plan to decomposition.
The sentinel means the plan is fully developed and ready to decompose — it is
never a substitute for writing the plan.

### Open questions await the user

\`TODO.md\` contains one or more \`<!-- user answers here -->\` markers — unanswered
questions. This is a human gate; there is nothing for you to do.

Tell the user to open \`TODO.md\`, answer each question inline (replacing its
\`<!-- user answers here -->\` marker with the answer).

Complete the tasks above, then end your turn. An outside process will decide
what to do next.
"
`;

exports[`buildPrompt snapshots > grilling stop plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean
\`TODO.md\` holds the plan under development. The grilling loop interviews it —
surfacing and resolving open questions — until the plan is solid enough to
decompose into work packages.

### The convergence marker

Every open question carries a single placeholder comment on its own line,
directly beneath the question:

\`<!-- user answers here -->\`

This placeholder is the **convergence marker**. While _any_ marker is present in
\`TODO.md\`, the harness **stops** and waits for the user to answer inline. When
there are genuinely no open questions left, write the sentinel line

\`no open questions — ready to plan\`

and leave **no** markers — the next cycle advances the plan to decomposition.
The sentinel means the plan is fully developed and ready to decompose — it is
never a substitute for writing the plan.

### Open questions await the user

\`TODO.md\` contains one or more \`<!-- user answers here -->\` markers — unanswered
questions. This is a human gate; there is nothing for you to do.

Tell the user to open \`TODO.md\`, answer each question inline (replacing its
\`<!-- user answers here -->\` marker with the answer).

After the tasks above are done, end your turn and never invoke an additional
process. This is a human feedback gate and the next step has to be invoked by a
human manually.
"
`;

exports[`buildPrompt snapshots > idle json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean
Report that the repository is idle — nothing to do.

Complete the tasks above, then end your turn. An outside process will decide
what to do next.
"
`;

exports[`buildPrompt snapshots > idle plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean
Report that the repository is idle — nothing to do.

After the tasks above are done, end your turn and never invoke an additional
process. This is a human feedback gate and the next step has to be invoked by a
human manually.
"
`;

exports[`buildPrompt snapshots > planning json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean
\`TODO.md\` contains an implementation plan. Decompose it into an ordered set of
executable work packages stored in the \`.gtd/\` directory. If \`.gtd/\` already
holds packages from an earlier turn, immediately abort and raise an error.

Spawn a **planning-model subagent** using model \`MODEL-decompose\` to perform the
decomposition. It creates numbered package directories, each holding numbered
task files:

\`\`\`
.gtd/
  01-<package-name>/
    01-<task-name>.md
    02-<task-name>.md
  02-<package-name>/
    ...
\`\`\`

**Rules for the subagent:**

1. **Packages are sequential, in dependency order** — ordinal-prefixed
   directories (\`01-\`, \`02-\`, …) execute in that order and the set is frozen
   once written. Order them so each package depends only on lower-numbered ones.

2. **Each package is green on its own** — the test suite runs after every
   package. Never split a feature so the tree stays red until a later package
   lands.

3. **Tasks within a package are parallel and file-disjoint** — all tasks in a
   package run simultaneously, each via one subagent, against the same working
   tree with no isolation. Two tasks that would touch the same file must be
   **merged** into one. If task B depends on task A, put them in separate
   packages.

4. **Vertical slices, not horizontal** — each package is a thin, end-to-end
   slice that is demoable or verifiable on its own. Prefer many thin packages
   over few thick ones; never a "set up infrastructure" package.

5. **Task files are self-contained** — each task \`.md\` includes a clear
   description of what to build, acceptance criteria as \`- [ ] Criterion\`
   checkboxes, the relevant file paths to examine, and any constraints or edge
   cases. It is the only context building agents will receive to work on the
   task.

**DO NOT** commit any changes. This process runs within a larger orchestration
that depends on uncommitted changes.

Complete the tasks above, then end your turn. An outside process will decide
what to do next.
"
`;

exports[`buildPrompt snapshots > planning plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean
\`TODO.md\` contains an implementation plan. Decompose it into an ordered set of
executable work packages stored in the \`.gtd/\` directory. If \`.gtd/\` already
holds packages from an earlier turn, immediately abort and raise an error.

Spawn a **planning-model subagent** using model \`MODEL-decompose\` to perform the
decomposition. It creates numbered package directories, each holding numbered
task files:

\`\`\`
.gtd/
  01-<package-name>/
    01-<task-name>.md
    02-<task-name>.md
  02-<package-name>/
    ...
\`\`\`

**Rules for the subagent:**

1. **Packages are sequential, in dependency order** — ordinal-prefixed
   directories (\`01-\`, \`02-\`, …) execute in that order and the set is frozen
   once written. Order them so each package depends only on lower-numbered ones.

2. **Each package is green on its own** — the test suite runs after every
   package. Never split a feature so the tree stays red until a later package
   lands.

3. **Tasks within a package are parallel and file-disjoint** — all tasks in a
   package run simultaneously, each via one subagent, against the same working
   tree with no isolation. Two tasks that would touch the same file must be
   **merged** into one. If task B depends on task A, put them in separate
   packages.

4. **Vertical slices, not horizontal** — each package is a thin, end-to-end
   slice that is demoable or verifiable on its own. Prefer many thin packages
   over few thick ones; never a "set up infrastructure" package.

5. **Task files are self-contained** — each task \`.md\` includes a clear
   description of what to build, acceptance criteria as \`- [ ] Criterion\`
   checkboxes, the relevant file paths to examine, and any constraints or edge
   cases. It is the only context building agents will receive to work on the
   task.

**DO NOT** commit any changes. This process runs within a larger orchestration
that depends on uncommitted changes.

After completing the tasks above, run \`gtd\` in the current working directory and
follow its output verbatim — execute exactly what it says, step by step, without
adding interpretation or extra steps.
"
`;

exports[`buildPrompt snapshots > squashing with squashDiff and squashBase json 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean
The process is **approved and done**. Your job is to author a clean
conventional-commits squash message and hand it off to the harness.

### Step 1 — Extract decisions from grilling rounds

Scan the git history of recent \`gtd: ...\` commits. Look for changes to \`TODO.md\`
— specifically the \`## Captured input (grilling)\` sections and any edits to plan
text. Extract **key decisions, trade-offs, and design choices** made during
grilling rounds. These will appear in the commit body so the history is
self-documenting.

### Step 2 — Draft the commit message

Draft ONE conventional-commits message:

\`\`\`
type(scope): subject

body (explain the why — motivation, trade-offs, key decisions from grilling)
\`\`\`

- **type**: \`feat\` / \`fix\` / \`refactor\` / \`chore\` / \`docs\` / \`test\`
- **subject**: imperative mood, ≤ 72 characters, lowercase after the colon
- **body**: include the important decisions / trade-offs from grilling sessions.
  Omit if there were no meaningful decisions to capture.

### Step 3 — Write SQUASH_MSG.md and hand off

Write the commit message (plain text, no markdown wrapper) to \`SQUASH_MSG.md\` in
the repo root, then leave it uncommitted — the harness handles the squash commit
on the next cycle once it sees \`SQUASH_MSG.md\`.

**Do not run \`git reset --soft\` or \`git commit\` yourself** — the harness handles
the squash commit.

Squash base: abc1234

### Full-process diff (\`git diff abc1234 HEAD\`)

\`\`\`diff
diff --git a/x b/x
+hello
\`\`\`

Complete the tasks above, then end your turn. An outside process will decide
what to do next.
"
`;

exports[`buildPrompt snapshots > squashing with squashDiff and squashBase plain 1`] = `
"You are an autonomous coding agent orchestrating work on the user's repo.

## Context

Last commit: \`chore: init\`
Working tree: clean
The process is **approved and done**. Your job is to author a clean
conventional-commits squash message and hand it off to the harness.

### Step 1 — Extract decisions from grilling rounds

Scan the git history of recent \`gtd: ...\` commits. Look for changes to \`TODO.md\`
— specifically the \`## Captured input (grilling)\` sections and any edits to plan
text. Extract **key decisions, trade-offs, and design choices** made during
grilling rounds. These will appear in the commit body so the history is
self-documenting.

### Step 2 — Draft the commit message

Draft ONE conventional-commits message:

\`\`\`
type(scope): subject

body (explain the why — motivation, trade-offs, key decisions from grilling)
\`\`\`

- **type**: \`feat\` / \`fix\` / \`refactor\` / \`chore\` / \`docs\` / \`test\`
- **subject**: imperative mood, ≤ 72 characters, lowercase after the colon
- **body**: include the important decisions / trade-offs from grilling sessions.
  Omit if there were no meaningful decisions to capture.

### Step 3 — Write SQUASH_MSG.md and hand off

Write the commit message (plain text, no markdown wrapper) to \`SQUASH_MSG.md\` in
the repo root, then leave it uncommitted — the harness handles the squash commit
on the next cycle once it sees \`SQUASH_MSG.md\`.

**Do not run \`git reset --soft\` or \`git commit\` yourself** — the harness handles
the squash commit.

Squash base: abc1234

### Full-process diff (\`git diff abc1234 HEAD\`)

\`\`\`diff
diff --git a/x b/x
+hello
\`\`\`

After completing the tasks above, run \`gtd\` in the current working directory and
follow its output verbatim — execute exactly what it says, step by step, without
adding interpretation or extra steps.
"
`;
